<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
   >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/shoe_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/shoe_name"
            app:layout_constraintBottom_toTopOf="@+id/shoe_name_editt"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/shoe_name_editt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="@string/shoe_name"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/company"
            app:layout_constraintBottom_toTopOf="@+id/company_editt"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_editt" />

        <EditText
            android:id="@+id/company_editt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="@string/company"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/size"
            app:layout_constraintBottom_toTopOf="@+id/size_editt"
            app:layout_constraintTop_toBottomOf="@+id/company_editt" />

        <EditText
            android:id="@+id/size_editt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="@string/size"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
            app:layout_constraintTop_toBottomOf="@+id/size_editt" />


        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/cancel_button"
            app:layout_constraintTop_toBottomOf="@+id/textView7">

            <EditText
                android:id="@+id/description_editt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="text" />

        </ScrollView>


        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toTopOf="@+id/cancel_button" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>