<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shoes_navigation"
    android:label="shoe_list_navigation"
    app:startDestination="@id/loginFragment">


    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.screens.login.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/toWelcomeScreen_action"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.screens.onboarding.InstructionsFragment"
        android:label="@string/about_app"
        tools:layout="@layout/instructions__fragment">
        <action
            android:id="@+id/toShopScreen_action"
            app:destination="@id/shopFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.screens.onboarding.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/welcome_fragment">
        <action
            android:id="@+id/toInstructionScreen_action"
            app:destination="@id/instructionsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shopFragment"
        android:name="com.udacity.shoestore.screens.shoe_list.ShopFragment"
        android:label="@string/shoe_list"
        tools:layout="@layout/shop_fragment">
        <action
            android:id="@+id/toShoeDetailScreen_action"
            app:destination="@id/shoeDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <argument
            android:name="shoe"
            android:defaultValue="@null"
            app:argType="com.udacity.shoestore.models.Shoe"
            app:nullable="true" />
        <action
            android:id="@+id/to_loginFragment_action"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popUpTo="@id/instructionsFragment"
            app:popUpToInclusive="true" />

    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.screens.shoe_details.ShoeDetailFragment"
        android:label="@string/shoe_details"
        tools:layout="@layout/shoe_detail_fragment">
        <action
            android:id="@+id/toShopFragment_action"
            app:destination="@id/shopFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/shopFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>